--- a/PMS-PropertyHapa.Staff/Views/Landlord/AddLandlord.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Landlord/AddLandlord.cshtml
@@ -220,6 +220,17 @@
                                             </div>
                                         </div>
 
+                                        <div class="col-sm-6 col-md-3">
+                                            <div class="mb-3">
+                                                <label for="AddLandlordAsUser" class="form-label">Add Landlord as User</label>
+                                                <select class="form-control select2" id="AddLandlordAsUser" name="AddLandlordAsUser" required>
+                                                    <option value="" disabled selected hidden>Select</option>
+                                                    <option value="true">Yes</option>
+                                                    <option value="false">No</option>
+                                                </select>
+                                            </div>
+                                        </div>
+
                                         <!-- Longitutde & Lantitude -->
                                         <div class="col-sm-6 col-md-3">
                                             <div class="mb-3">
@@ -720,8 +731,12 @@
             if (response.ok) {
                 const result = await response.json();
                 console.log(result);
-                toastr.success('Landlord save successful');
-                window.location.href = '/Landlord/Index';
+                if (result.success) {
+                    toastr.success(result.message);
+                    window.location.href = '/Landlord/Index';
+                } else {
+                    toastr.error(result.message);
+                }
             } else {
                 console.error('Server responded with non-OK status');
                 toastr.error('Operation failed. Server responded with an error.');
@@ -777,6 +792,12 @@
 
     });
 
+    document.addEventListener('DOMContentLoaded', function () {
+        var addTenantAsUser = '@(Model?.AddLandlordAsUser.ToString().ToLower())'; // Assuming Model.AddTenantAsUser is a boolean
+        if (addTenantAsUser) {
+            document.getElementById("AddLandlordAsUser").value = addTenantAsUser;
+        }
+    });
 
     function downloadFile(id) {
         window.location.href = '/Landlord/Download?id=' + id;
