--- a/PMS-PropertyHapa.Staff/Views/Tenant/AddTenant.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Tenant/AddTenant.cshtml
@@ -961,13 +961,13 @@
 
 
 
-    const toggleCheckbox = document.getElementById('toggleOrgInfo');
-    toggleCheckbox.addEventListener('change', function () {
-        const orgFields = document.querySelectorAll('.organization-field');
-        orgFields.forEach(field => {
-            field.style.display = this.checked ? 'block' : 'none';
-        });
-    });
+    // const toggleCheckbox = document.getElementById('toggleOrgInfo');
+    // toggleCheckbox.addEventListener('change', function () {
+    //     const orgFields = document.querySelectorAll('.organization-field');
+    //     orgFields.forEach(field => {
+    //         field.style.display = this.checked ? 'block' : 'none';
+    //     });
+    // });
 
 
 
