--- a/PMS-PropertyHapa.Staff/Views/Accounting/Rent.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Accounting/Rent.cshtml
@@ -24,128 +24,26 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header d-flex justify-content-between align-items-center">
-                        <h4 class="card-title">
-                            Rent
-                        </h4>
                     </div>
                     <div class="card-body">
-                        <div class="table-responsive">
-                            <table class="table" id="grouproles">
-                                <thead>
-                                    <tr>
-                                        <th style="width:290px!Important;text-align:center">.........</th>
-                                        <th style="width:290px!Important;text-align:center">.........</th>
-                                        <th style="width:290px!Important;text-align:center">Action</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                    </tr>
-                                    <tr>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                    </tr>
-                                    <tr>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                    </tr>
-                                    <tr>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                    </tr>
-                                    <tr>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                    </tr>
-                                    <tr>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                    </tr>
-                                    <tr>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                    </tr>
-                                    <tr>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                    </tr>
-                                    <tr>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                    </tr>
-                                    <tr>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                    </tr>
-                                    <tr>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                    </tr>
-                                    <tr>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                    </tr>
-                                    <tr>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                    </tr>
-                                    <tr>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                    </tr>
-                                    <tr>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                    </tr>
-                                    <tr>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                    </tr>
-                                    <tr>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                    </tr>
-                                    <tr>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                    </tr>
-                                    <tr>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                    </tr>
-                                    <tr>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                    </tr>
-                                    <tr>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                        <td style="text-align:center">.........</td>
-                                    </tr>
-                                </tbody>
-                            </table>
+                        <div class="row">
+                            <div class="table-responsive">
+                                <h3 class="card-title">Rent</h3>
+                                <table class="table display" id="rentTbl">
+                                    <thead>
+                                        <tr>
+                                            <th>Invoice</th>
+                                            <th>Start Date</th>
+                                            <th>End Date</th>
+                                            <th>Property</th>
+                                            <th>Unit</th>
+                                            <th>Income</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -153,5 +51,39 @@
         </div>
     </div>
 </div>
+<script>
+    $(document).ready(function () {
+        $('#rentTbl').DataTable({
+            "ajax": {
+                "url": "/Accounting/GetRents",
+                "type": "POST",
+                "dataSrc": "",
+                "error": function (xhr, error, thrown) {
+                    alert('Failed to retrieve data. Please try again later.');
+                }
+            },
+            "columns": [
+                { data: "Invoice" },
+                {
+                    data: "StartDate",
+                    render: function (data, type, row) {
+                        return moment(data).format('MM/DD/YYYY');
+                    }
+                },
+                {
+                    data: "EndDate",
+                    render: function (data, type, row) {
+                        return moment(data).format('MM/DD/YYYY');
+                    }
+                },
+                { data: "Property" },
+                { data: "Unit" },
+                { data: "RentCharges" }
+            ]
+        });
+    });
+
+
+</script>
 
 
